# archMind

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
civilmind/: __init__.py  config.py  settings.py
civilmind/agents/: __init__.py  crew.py  roles.py  tools.py
civilmind/api/: app.py
civilmind/db/: engine.py  models.py  session.py
civilmind/evaluation/: __init__.py  (+4 more)
docs/: architecture-flow.md  infrastructure-setup.md
plan/: 1.1-project-skeleton.md  1.2-fastapi-app.md  1.3-postgres-models.md  1.4-qdrant-store.md  1.5-minio-storage.md  1.6-redis-event-bus.md  10.1-project-crud.md  10.2-query-reports.md  10.3-docker-compose.md  10.4-observability.md  11.1-image-to-cad-bim.md  11.2-cad-recognition.md  11.3-cad-geometry.md  11.4-cad-api-worker.md  11.5-3d-model-export.md  2.1-tool-registry.md  2.2-vector-search-tool.md  2.3-sql-query-tool.md  2.4-ocr-vision-tools.md  2.5-calculator-code-search.md  3.1-document-parser.md  3.2-chunker-metadata.md  3.3-embedding-service.md  3.4-pipeline-orchestrator.md  4.1-bm25-index.md  4.2-hybrid-retrieval.md  5.1-state-model.md  5.2-graph-nodes.md  5.3-graph-builder.md  6.1-agent-definitions.md  6.2-crew-orchestration.md  7.1-vision-ocr.md  7.2-table-extraction.md  7.3-floor-plan-analysis.md  8.1-neo4j-schema.md  8.2-graphrag.md  9.1-retrieval-metrics.md  9.2-generation-metrics.md  9.3-evaluation-pipeline.md
scripts/: db_reset.py  health_check.py  test_tools.py
tests/: test_agents.py  test_vision.py  test_workflow_graph.py  test_workflow_nodes.py  test_workflow_state.py
(+47 files in other folders)
