[project]
name = "civilmind"
version = "0.1.0"
description = "AI Architecture & Construction Copilot"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Vector DB
    "qdrant-client>=1.9.0",

    # Object Storage
    "minio>=7.2.0",

    # Config
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Document Parsing
    "unstructured[all-docs]>=0.15.0",
    "langchain-text-splitters>=0.2.0",

    # Embeddings
    "sentence-transformers>=3.1.0",
    "openai>=1.40.0",

    # Retrieval
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",

    # Reranking
    "sentence-transformers>=3.1.0",

    # Agent Framework
    "crewai>=0.86.0",
    "langgraph>=0.2.0",

    # Knowledge Graph
    "neo4j>=5.22.0",

    # Vision / OCR
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.0",
    "pillow>=10.0.0",

    # Utils
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
